Semiconductor_Yield_Prediction.ipynb

--- a/Semiconductor_Yield_Prediction.ipynb
+++ b/Semiconductor_Yield_Prediction.ipynb
@@ -763,7 +763,7 @@
         "- Feature Selection\n",
         "- Outlier Detection and Elimination\n",
         "- Skewness Handling\n",
-        "- Feature Scaling\n",
+        "- Feature Scaling:\n",
         "  - Mutual Information\n",
         "  - Correlation Analysis\n",
         "- Target Column Balancing\n",
